2005-12-10  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* FAQ/FAQ.classlibrary-compile: Updated the description of ecj.

2005-12-08  Guilhem Lavaux  <guilhem@kaffe.org>

	* developers/update-vm-list: Sort files before adding them to
	Makefile.am

	* configure.ac: Fixed a small problem when a precise ecj is
	specified in --with-ecj.
	
	* configure,
	libraries/javalib/Makefile.am,
	libraries/javalib/Makefile.in,
	libraries/javalib/external/classpath/Makefile.in,
	libraries/javalib/external/classpath/aclocal.m4,
	libraries/javalib/external/classpath/configure,
	libraries/javalib/external/classpath/examples/Makefile.in,
	libraries/javalib/external/classpath/external/Makefile.in,
	libraries/javalib/external/classpath/external/sax/Makefile.in,
	libraries/javalib/external/classpath/external/w3c_dom/Makefile.in,
	libraries/javalib/external/classpath/include/Makefile.in,
	libraries/javalib/external/classpath/lib/Makefile.in,
	libraries/javalib/external/classpath/native/Makefile.in,
	libraries/javalib/external/classpath/native/fdlibm/Makefile.in,
	libraries/javalib/external/classpath/native/jawt/Makefile.in,
	libraries/javalib/external/classpath/native/jni/Makefile.in,
	libraries/javalib/external/classpath/native/jni/classpath/Makefile.in,
	libraries/javalib/external/classpath/native/jni/gtk-peer/Makefile.in,
	libraries/javalib/external/classpath/native/jni/java-io/Makefile.in,
	libraries/javalib/external/classpath/native/jni/java-lang/Makefile.in,
	libraries/javalib/external/classpath/native/jni/java-net/Makefile.in,
	libraries/javalib/external/classpath/native/jni/java-nio/Makefile.in,
	libraries/javalib/external/classpath/native/jni/java-util/Makefile.in,
	libraries/javalib/external/classpath/native/jni/midi-alsa/Makefile.in,
	libraries/javalib/external/classpath/native/jni/midi-dssi/Makefile.in,
	libraries/javalib/external/classpath/native/jni/qt-peer/Makefile.in,
	libraries/javalib/external/classpath/native/jni/xmlj/Makefile.in,